greeter-service/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: greeter
  namespace: apps
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
        - name: app
          image: jeanpsv/gke-grpc-example:greeter-service
          imagePullPolicy: Always
          command: ["npm", "run", "server", "--prefix", "greeter-service"]
          ports:
            - name: http
              containerPort: 50051
