greeter-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: greeter
