greeter-service/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: h2c
spec:
  rules:
    - host: "greeter.service.equipe.ninja"
      http:
        paths:
          - path: /
            backend:
              serviceName: app-service
              servicePort: http
